// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`compile literals 1`] = `
Block {
  "expressions": [
    Literal {
      "type": "Int",
      "value": "1",
    },
  ],
  "type": "Int",
}
`;

exports[`compile literals 2`] = `
"
(() => {
    return BigInt(1);
})()"
`;

exports[`compile literals 3`] = `
Block {
  "expressions": [
    Literal {
      "type": "Float",
      "value": "1.23",
    },
  ],
  "type": "Float",
}
`;

exports[`compile literals 4`] = `
"
(() => {
    return 1.23;
})()"
`;

exports[`compile literals 5`] = `
Block {
  "expressions": [
    Literal {
      "type": "Bool",
      "value": "true",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile literals 6`] = `
"
(() => {
    return true;
})()"
`;

exports[`compile literals 7`] = `
Block {
  "expressions": [
    Literal {
      "type": "Bool",
      "value": "false",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile literals 8`] = `
"
(() => {
    return false;
})()"
`;

exports[`compile literals 9`] = `
Block {
  "expressions": [
    Literal {
      "type": "Str",
      "value": "hello",
    },
  ],
  "type": "Str",
}
`;

exports[`compile literals 10`] = `
"
(() => {
    return "hello";
})()"
`;

exports[`compile binary expressions 1`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "+",
      "right": Literal {
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile binary expressions 2`] = `
"
(() => {
    return (BigInt(1) + BigInt(2));
})()"
`;

exports[`compile binary expressions 3`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "-",
      "right": Literal {
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile binary expressions 4`] = `
"
(() => {
    return (BigInt(1) - BigInt(2));
})()"
`;

exports[`compile binary expressions 5`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "*",
      "right": Literal {
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile binary expressions 6`] = `
"
(() => {
    return (BigInt(1) * BigInt(2));
})()"
`;

exports[`compile binary expressions 7`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "/",
      "right": Literal {
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile binary expressions 8`] = `
"
(() => {
    return (BigInt(1) / BigInt(2));
})()"
`;

exports[`compile binary expressions 9`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Literal {
          "type": "Int",
          "value": "3",
        },
        "operator": "*",
        "right": Binary {
          "left": Literal {
            "type": "Int",
            "value": "1",
          },
          "operator": "+",
          "right": Literal {
            "type": "Int",
            "value": "3",
          },
          "type": "Int",
        },
        "type": "Int",
      },
      "operator": "/",
      "right": Literal {
        "type": "Int",
        "value": "2",
      },
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile binary expressions 10`] = `
"
(() => {
    return ((BigInt(3) * (BigInt(1) + BigInt(3))) / BigInt(2));
})()"
`;

exports[`compile binary expressions 11`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Bool",
        "value": "true",
      },
      "operator": "and",
      "right": Literal {
        "type": "Bool",
        "value": "false",
      },
      "type": "Bool",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile binary expressions 12`] = `
"
(() => {
    return (true && false);
})()"
`;

exports[`compile binary expressions 13`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Bool",
        "value": "true",
      },
      "operator": "or",
      "right": Literal {
        "type": "Bool",
        "value": "false",
      },
      "type": "Bool",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile binary expressions 14`] = `
"
(() => {
    return (true || false);
})()"
`;

exports[`compile binary expressions 15`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "==",
      "right": Literal {
        "type": "Int",
        "value": "1",
      },
      "type": "Bool",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile binary expressions 16`] = `
"
(() => {
    return (BigInt(1) === BigInt(1));
})()"
`;

exports[`compile binary expressions 17`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "!=",
      "right": Literal {
        "type": "Int",
        "value": "1",
      },
      "type": "Bool",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile binary expressions 18`] = `
"
(() => {
    return (BigInt(1) !== BigInt(1));
})()"
`;

exports[`compile binary expressions 19`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Literal {
          "type": "Int",
          "value": "1",
        },
        "operator": ">",
        "right": Literal {
          "type": "Int",
          "value": "2",
        },
        "type": "Bool",
      },
      "operator": "and",
      "right": Binary {
        "left": Literal {
          "type": "Int",
          "value": "3",
        },
        "operator": "<",
        "right": Literal {
          "type": "Int",
          "value": "4",
        },
        "type": "Bool",
      },
      "type": "Bool",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile binary expressions 20`] = `
"
(() => {
    return ((BigInt(1) > BigInt(2)) && (BigInt(3) < BigInt(4)));
})()"
`;

exports[`compile binary expressions 21`] = `
Block {
  "expressions": [
    Binary {
      "left": Binary {
        "left": Literal {
          "type": "Int",
          "value": "1",
        },
        "operator": ">",
        "right": Literal {
          "type": "Int",
          "value": "2",
        },
        "type": "Bool",
      },
      "operator": "or",
      "right": Binary {
        "left": Literal {
          "type": "Int",
          "value": "3",
        },
        "operator": "<",
        "right": Literal {
          "type": "Int",
          "value": "4",
        },
        "type": "Bool",
      },
      "type": "Bool",
    },
  ],
  "type": "Bool",
}
`;

exports[`compile binary expressions 22`] = `
"
(() => {
    return ((BigInt(1) > BigInt(2)) || (BigInt(3) < BigInt(4)));
})()"
`;

exports[`compile block 1`] = `
Block {
  "expressions": [
    Block {
      "expressions": [
        Literal {
          "type": "Int",
          "value": "1",
        },
      ],
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile block 2`] = `
"
(() => {
    return (() => {
        return BigInt(1);
    })();
})()"
`;

exports[`compile block 3`] = `
Block {
  "expressions": [
    Binary {
      "left": Literal {
        "type": "Int",
        "value": "1",
      },
      "operator": "+",
      "right": Block {
        "expressions": [
          Literal {
            "type": "Int",
            "value": "1",
          },
        ],
        "type": "Int",
      },
      "type": "Int",
    },
  ],
  "type": "Int",
}
`;

exports[`compile block 4`] = `
"
(() => {
    return (BigInt(1) + (() => {
        return BigInt(1);
    })());
})()"
`;

exports[`compile block 5`] = `
Block {
  "expressions": [
    Block {
      "expressions": [
        DropValue {
          "child": Literal {
            "type": "Int",
            "value": "1",
          },
          "type": "Null",
        },
      ],
      "type": "Null",
    },
  ],
  "type": "Null",
}
`;

exports[`compile block 6`] = `
"
(() => {
    return (() => {
        BigInt(1);
        return null;
    })();
})()"
`;

exports[`compile variables 1`] = `
Block {
  "expressions": [
    Assignment {
      "isDropped": true,
      "name": "x",
      "type": "Null",
      "value": Literal {
        "type": "Float",
        "value": "1.2",
      },
    },
    Assignment {
      "isDropped": true,
      "name": "y",
      "type": "Null",
      "value": Block {
        "expressions": [
          Literal {
            "type": "Float",
            "value": "2.3",
          },
        ],
        "type": "Float",
      },
    },
    Binary {
      "left": Variable {
        "name": "x",
        "type": "Float",
      },
      "operator": "+",
      "right": Variable {
        "name": "y",
        "type": "Float",
      },
      "type": "Float",
    },
  ],
  "type": "Float",
}
`;

exports[`compile variables 2`] = `
"var x;
var y;
(() => {
    x = 1.2;
    y = (() => {
        return 2.3;
    })();
    return (x + y);
})()"
`;

exports[`compile variables 3`] = `
Block {
  "expressions": [
    Assignment {
      "isDropped": true,
      "name": "x",
      "type": "Null",
      "value": Literal {
        "type": "Float",
        "value": "1.2",
      },
    },
    Assignment {
      "isDropped": false,
      "name": "y",
      "type": "Float",
      "value": Block {
        "expressions": [
          Literal {
            "type": "Float",
            "value": "2.3",
          },
        ],
        "type": "Float",
      },
    },
    Assignment {
      "isDropped": false,
      "name": "x",
      "type": "Float",
      "value": Binary {
        "left": Variable {
          "name": "x",
          "type": "Float",
        },
        "operator": "+",
        "right": Variable {
          "name": "y",
          "type": "Float",
        },
        "type": "Float",
      },
    },
  ],
  "type": "Float",
}
`;

exports[`compile variables 4`] = `
"var x;
var y;
(() => {
    x = 1.2;
    (() => { y = (() => {
        return 2.3;
    })(); return y; })();
    return (() => { x = (x + y); return x; })();
})()"
`;
